perf(o11y-manager): make the monitoring metric cache actually cache